# lattice_bootstrap

./: .gitignore  .gitmodules  README.md  all_plots.sh  plots.py  pyproject.toml  run_cauchy_moment.sh  run_hvp_moment.sh  run_sweep.py  run_tau_moment.sh  run_tau_pick.sh
scripts/: generate_test_data.py
sdppy/: generate.py  hamburgers.py  io_utils.py  kernels.py  mp_array.py  mp_utils.py  pmp.py  polynomials.py  scipy_linalg_mp.py  sdp.py  solve_sdp.py  test_mp_array.py  test_pmp.py  test_polynomials.py  test_sdp.py  test_solve_sdp.py  test_util.py  util.py
test_data/hamburger_sdp/: block_data_0.json  block_info_0.json  control.json  objectives.json  pmp_info.json  results.json
test_data/noisy_stieltjes_sdp/: block_data_0.json  block_data_1.json  block_info_0.json  block_info_1.json  objectives.json  results.json
test_data/stieltjes_sdp/: block_data_0.json  block_info_0.json  control.json  objectives.json  pmp_info.json  results.json
test_data/test_sdp/: block_data_0.json  block_info_0.json  control.json  pmp_info.json  results.json
