[project]
name = "sdppy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "filelock>=3.25.2",
    "ipykernel>=6.30.1",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.6",
    "mpmath>=1.3.0",
    "numpy>=2.0",
    "pip>=25.2",
    "pytest>=8.4.2",
    "python-flint>=0.6.0",
    "scipy>=1.0",
    "sympy>=1.14.0",
]

[tool.uv.workspace]
members = [
    "mp_array",
]

[tool.setuptools]
py-modules = ["sdppy"]
